# Lithium

./: .gitignore  CMakeLists.txt  PLAN.md  build.bat  build.sh  conanfile.py  test_location_tracking.cpp
cmake/: AddModule.cmake  CompilerOptions.cmake
docs/: architecture.md  css-2025.html
docs/dom_spec/: dom.html
docs/html5_spec/: syntax.html
src/beryl/: CMakeLists.txt
src/beryl/include/lithium/beryl/: backend.hpp  beryl.hpp  font.hpp  glyph.hpp  text_engine.hpp  text_layout.hpp  types.hpp
src/beryl/src/: backend.cpp
src/beryl/src/backends/directwrite/: CMakeLists.txt  dwrite_font.cpp  dwrite_font.hpp
src/bindings/: CMakeLists.txt
src/bindings/include/lithium/bindings/: dom_bindings.hpp
src/bindings/src/: document_binding.cpp  dom_bindings.cpp  element_binding.cpp  window_binding.cpp
src/browser/: CMakeLists.txt  main.cpp
src/browser/include/lithium/browser/: engine.hpp
src/browser/src/: engine.cpp  tab.cpp  ui.cpp
src/core/: CMakeLists.txt
src/core/include/lithium/core/: logger.hpp  memory.hpp  string.hpp  types.hpp
src/core/src/: logger.cpp  string.cpp
src/css/: CMakeLists.txt
src/css/include/lithium/css/: parser.hpp  selector.hpp  style_resolver.hpp  tokenizer.hpp  value.hpp
src/css/src/: parser.cpp  selector.cpp  style_resolver.cpp  tokenizer.cpp  value.cpp
src/dom/: CMakeLists.txt
src/dom/include/lithium/dom/: document.hpp  element.hpp  node.hpp  text.hpp
src/dom/src/: document.cpp  element.cpp  node.cpp  text.cpp
src/html/: CMakeLists.txt
src/html/include/lithium/html/: parser.hpp  tokenizer.hpp  tree_builder.hpp
src/html/src/: parser.cpp  tokenizer.cpp  tree_builder.cpp
src/html/src/tokenizer/: entities.inc  tokenizer_core.cpp  tokenizer_state_charref.cpp  tokenizer_state_comment_doctype.cpp  tokenizer_state_data.cpp  tokenizer_state_tag.cpp  tokenizer_tokens.cpp
src/html/src/tree_builder/: constants.hpp  tree_builder_core.cpp  tree_builder_insertion_body.cpp  tree_builder_insertion_head.cpp  tree_builder_insertion_table.cpp
src/js/: CMakeLists.txt
src/js/include/lithium/js/: ast.hpp  bytecode.hpp  compiler.hpp  diagnostic.hpp  gc.hpp  lexer.hpp  object.hpp  parser.hpp  shape.hpp  string_intern.hpp  value.hpp  vm.hpp
src/js/src/: ast.cpp  bytecode.cpp  compiler.cpp  gc.cpp  lexer.cpp  object.cpp  parser.cpp  shape.cpp  string_intern.cpp  value.cpp  vm.cpp
src/js/src/compiler/: compiler_core.cpp  compiler_emit.cpp  compiler_expressions.cpp  compiler_patterns.cpp  compiler_scope.cpp  compiler_statements.cpp
src/layout/: CMakeLists.txt
src/layout/include/lithium/layout/: block_layout.hpp  box.hpp  inline_layout.hpp  layout_context.hpp
src/layout/src/: block_layout.cpp  box.cpp  inline_layout.cpp  layout_context.cpp
src/mica/: CMakeLists.txt
src/mica/include/lithium/mica/: backend.hpp  canvas.hpp  context.hpp  mica.hpp  painter.hpp  resource.hpp  types.hpp
src/mica/src/: backend.cpp  engine.cpp  painter.cpp
src/mica/src/backends/direct2d/: CMakeLists.txt  d2d_backend.cpp  d2d_backend.hpp  d2d_context.cpp  d2d_painter.cpp  d2d_resource.cpp
src/mica/src/backends/opengl/: CMakeLists.txt  gl_backend.cpp  gl_backend.hpp  gl_context.cpp  gl_painter.cpp  gl_resource.cpp
src/mica/src/backends/software/: CMakeLists.txt  sw_backend.cpp  sw_backend.hpp  sw_context.cpp  sw_painter.cpp  sw_resource.cpp
src/network/: CMakeLists.txt
src/network/include/lithium/network/: http_client.hpp  resource_loader.hpp
src/network/src/: http_client.cpp  resource_loader.cpp
src/platform/: CMakeLists.txt
src/platform/include/lithium/platform/: d2d_graphics_context.hpp  d2d_text_renderer.hpp  event.hpp  graphics_backend.hpp  graphics_config.hpp  graphics_context.hpp  opengl_graphics_context.hpp  text_rendering_architecture.hpp  window.hpp
src/platform/src/: event.cpp  graphics_context.cpp  graphics_factory.cpp  window.cpp
src/platform/src/direct2d/: d2d_graphics_context.cpp  d2d_render_state.cpp  d2d_text_renderer.cpp  d2d_texture_cache.cpp
src/platform/src/linux/: graphics_context_x11.cpp  window_x11.cpp
src/platform/src/opengl/: opengl_graphics_context.cpp  opengl_render_state.cpp  opengl_shader_manager.cpp  opengl_texture_cache.cpp  opengl_utils.cpp
src/platform/src/shared/: batch_renderer.cpp  glyph_cache.cpp  texture_atlas.cpp
src/platform/src/windows/: graphics_context_win32.cpp  window_win32.cpp
src/render/: CMakeLists.txt
src/render/include/lithium/render/: compositor.hpp  display_list.hpp  paint_context.hpp
src/render/src/: compositor.cpp  display_list.cpp  paint_context.cpp
src/text/: CMakeLists.txt
src/text/include/lithium/text/: font.hpp  line_breaker.hpp  shaper.hpp
src/text/src/: font.cpp  line_breaker.cpp  shaper.cpp
tests/: CMakeLists.txt  d2d_text_test.cpp  text_render_test.cpp
tests/integration/: CMakeLists.txt  test_html_to_render.cpp  tokenizer_test.cpp
tests/platform/: test_graphics_backends.cpp
tests/unit/: CMakeLists.txt
tests/unit/core/: test_string.cpp  test_types.cpp
tests/unit/css/: test_parser.cpp  test_selector.cpp  test_tokenizer.cpp
tests/unit/dom/: test_dom_bindings.cpp  test_inner_html.cpp
tests/unit/html/: test_parser.cpp  test_tokenizer.cpp
tests/unit/js/: test_lexer.cpp  test_parser.cpp  test_vm.cpp
tests/unit/layout/: test_block_layout.cpp  test_box.cpp
tests/unit/render/: test_display_list.cpp
tools/: CMakeLists.txt
tools/css_parser_cli/: CMakeLists.txt  main.cpp
tools/html_parser_cli/: CMakeLists.txt  main.cpp
tools/js_repl/: CMakeLists.txt  main.cpp
tools/js_runfile/: CMakeLists.txt  main.cpp
